@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX README Files</i></font></big></h1>
-      <p>Last Updated: September 12, 2012</p>
+      <p>Last Updated: September 25, 2012</p>
     </td>
   </tr>
 </table>
@@ -73,8 +73,8 @@
  |   |   |   |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/eagle100/src/README.txt">src/README.txt</a>
  |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/eagle100/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- ekk-lm3s9b96/
- |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/ekk-lm3s9b96/README.txt"><b><i>README.txt
- |   |   |-  |   |   |- ez80f910200kitg/
+ |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/ekk-lm3s9b96/README.txt"><b><i>README.txt</i></b></a>
+ |   |   |- ez80f910200kitg/
  |   |   |   |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/ez80f910200kitg/ostest/README.txt">ostest/README.txt</a>
  |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/ez80f910200kitg/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- ez80f910200zco/
@@ -93,7 +93,8 @@
  |   |   |   |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/hymini-stm32v/src/README.txt">src/README.txt</a>
  |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/hymini-stm32v/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- lincoln60/
- |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/lincoln60/README.txt"><b><i>README.txt |   |   |- kwikstik-k40/
+ |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/lincoln60/README.txt"><b><i>README.txt</i></b></a>
+ |   |   |- kwikstik-k40/
  |   |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/kwikstik-k40/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- lm3s6432-s2e/
  |   |   |   |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/configs/lm3s6432-s2e/include/README.txt">include/README.txt</a>
