@@ -71,7 +71,7 @@ CONFIG_ARCH_CHIP="stm32"
 CONFIG_ARCH_HAVE_MPU=y
 # CONFIG_ARMV7M_MPU is not set
 CONFIG_ARCH_IRQPRIO=y
-CONFIG_BOARD_LOOPSPERMSEC=10926
+CONFIG_BOARD_LOOPSPERMSEC=5483
 # CONFIG_ARCH_CALIBRATION is not set
 # CONFIG_SERIAL_TERMIOS is not set
 # CONFIG_NET_MULTICAST is not set
@@ -121,7 +121,7 @@ CONFIG_STM32_CODESOURCERYW=y
 # CONFIG_STM32_CRC is not set
 # CONFIG_STM32_DMA1 is not set
 # CONFIG_STM32_DMA2 is not set
-# CONFIG_STM32_BKP is not set
+CONFIG_STM32_BKP=y
 # CONFIG_STM32_CAN1 is not set
 # CONFIG_STM32_DAC1 is not set
 # CONFIG_STM32_DAC2 is not set
@@ -132,7 +132,7 @@ CONFIG_STM32_I2C1=y
 CONFIG_STM32_PWR=y
 # CONFIG_STM32_SPI1 is not set
 # CONFIG_STM32_SPI2 is not set
-# CONFIG_STM32_SPI4 is not set
+CONFIG_STM32_SPI3=y
 # CONFIG_STM32_TIM1 is not set
 # CONFIG_STM32_TIM2 is not set
 # CONFIG_STM32_TIM3 is not set
@@ -148,20 +148,28 @@ CONFIG_STM32_USART2=y
 # CONFIG_STM32_UART5 is not set
 # CONFIG_STM32_USB is not set
 # CONFIG_STM32_WWDG is not set
+CONFIG_STM32_SPI=y
 CONFIG_STM32_I2C=y
 
 #
 # Alternate Pin Mapping
 #
-# CONFIG_STM32_USART2_REMAP is not set
+CONFIG_STM32_USART2_REMAP=y
+CONFIG_STM32_SPI3_REMAP=y
 # CONFIG_STM32_I2C1_REMAP is not set
-# CONFIG_STM32_ETH_REMAP is not set
+CONFIG_STM32_ETH_REMAP=y
 # CONFIG_STM32_JTAG_DISABLE is not set
 CONFIG_STM32_JTAG_FULL_ENABLE=y
 # CONFIG_STM32_JTAG_NOJNTRST_ENABLE is not set
 # CONFIG_STM32_JTAG_SW_ENABLE is not set
 # CONFIG_STM32_FORCEPOWER is not set
 # CONFIG_ARCH_BOARD_STM32_CUSTOM_CLOCKCONFIG is not set
+
+#
+# SPI Configuration
+#
+# CONFIG_STM32_SPI_INTERRUPTS is not set
+# CONFIG_STM32_SPI_DMA is not set
 
 #
 # I2C Configuration
@@ -176,17 +184,19 @@ CONFIG_STM32_I2CTIMEOTICKS=500
 # Ethernet MAC configuration
 #
 CONFIG_STM32_PHYADDR=0
-CONFIG_STM32_MII=y
-CONFIG_STM32_MII_MCO=y
-# CONFIG_STM32_MII_EXTCLK is not set
+# CONFIG_STM32_MII is not set
 CONFIG_STM32_AUTONEG=y
-CONFIG_STM32_PHYSR=16
-# CONFIG_STM32_PHYSR_ALTCONFIG is not set
-CONFIG_STM32_PHYSR_SPEED=0x0002
-CONFIG_STM32_PHYSR_100MBPS=0x0000
-CONFIG_STM32_PHYSR_MODE=0x0004
-CONFIG_STM32_PHYSR_FULLDUPLEX=0x0004
+CONFIG_STM32_PHYSR=17
+CONFIG_STM32_PHYSR_ALTCONFIG=y
+CONFIG_STM32_PHYSR_ALTMODE=0xf000
+CONFIG_STM32_PHYSR_10HD=0x1000
+CONFIG_STM32_PHYSR_100HD=0x4000
+CONFIG_STM32_PHYSR_10FD=0x2000
+CONFIG_STM32_PHYSR_100FD=0x8000
 # CONFIG_STM32_ETH_PTP is not set
+CONFIG_STM32_RMII=y
+CONFIG_STM32_RMII_MCO=y
+# CONFIG_STM32_RMII_EXTCLK is not set
 
 #
 # USB Host Configuration
@@ -203,7 +213,7 @@ CONFIG_ARCH_STACKDUMP=y
 # Board Settings
 #
 CONFIG_DRAM_START=0x20000000
-CONFIG_DRAM_SIZE=196608
+CONFIG_DRAM_SIZE=65536
 CONFIG_ARCH_HAVE_INTERRUPTSTACK=y
 CONFIG_ARCH_INTERRUPTSTACK=0
 
@@ -263,8 +273,8 @@ CONFIG_RR_INTERVAL=200
 CONFIG_TASK_NAME_SIZE=0
 # CONFIG_JULIAN_TIME is not set
 CONFIG_START_YEAR=2012
-CONFIG_START_MONTH=5
-CONFIG_START_DAY=28
+CONFIG_START_MONTH=9
+CONFIG_START_DAY=26
 CONFIG_DEV_CONSOLE=y
 # CONFIG_DEV_LOWCONSOLE is not set
 # CONFIG_MUTEX_TYPES is not set
@@ -339,7 +349,7 @@ CONFIG_SPI=y
 CONFIG_SPI_EXCHANGE=y
 # CONFIG_SPI_CMDDATA is not set
 CONFIG_RTC=y
-CONFIG_RTC_DATETIME=y
+# CONFIG_RTC_DATETIME is not set
 # CONFIG_RTC_ALARM is not set
 # CONFIG_WATCHDOG is not set
 # CONFIG_ANALOG is not set
@@ -985,7 +995,7 @@ CONFIG_NSH_NESTDEPTH=3
 # CONFIG_NSH_DISABLEBG is not set
 CONFIG_NSH_CONSOLE=y
 # CONFIG_NSH_CONDEV is not set
-# CONFIG_NSH_ARCHINIT is not set
+CONFIG_NSH_ARCHINIT=y
 CONFIG_NSH_TELNET=y
 CONFIG_NSH_TELNETD_PORT=23
 CONFIG_NSH_TELNETD_DAEMONPRIO=100
